[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
winit = "0.26.1"
env_logger = "0.9.0"
log = "0.4.14"
zip = "0.5.13"
serde_json = "1.0.78"
thiserror = "1.0.30"
